# gaze-point-estimation-demo

./: .gitignore  README.md
estimator/: annotator.py  annotator.toml  bootstrap.py  bootstrap.spec  bundle-annotator.py  bundle-annotator.spec  bundle-estimator.py  bundle-estimator.spec  config.toml  estimator-config.toml  estimator.py  estimator.toml  labeling.py  labeling.toml  requirements.txt
estimator/annotate/: base_pass.py  data_pass.py  face_pass.py  io_pass.py  main_pass.py  mgmt_pass.py  miscellaneous.py  mp_pass.py  okay_pass.py  out_pass.py  passes.py  vis_pass.py
estimator/annotator-config/: annot-multi-subjects.toml  annot-single-subject.toml  reorganize-folder.toml  restore-folder.toml  visualize-annot.toml
estimator/checkpoint/: README.md  instruction.txt
estimator/label/: labels.py  parallel.py  preview.py
estimator/resources/: .gitignore  README.md  facenet.py
estimator/runtime/: bundle.py  captures.py  es_config.py  inference.py  log.py  miscellaneous.py  one_euro.py  pipeline.py  preview.py  server.py  storage.py  transform.py
estimator/runtime/tobiipro-sdk-python/tobiipro-sdk-c/: CMakeLists.txt
estimator/runtime/tobiipro-sdk-python/tobiipro-sdk-c/examples/: CMakeLists.txt  calibrating_with_gaze.c  calibration.c  calibration_data.c  display_area.c  find_all_eyetrackers.c  frequencies.c  gaze_data.c  notifications.c  synchronization.c  user_position_guide.c
estimator/tools/: calibrate.py  cleanse.py  data_cleaning.py  preview.py  (+2 more)
estimator/tools.deprecated/: tool_utils.py
sketch/: debug.html  debug.js  demo.html  demo.js
(+21 files in other folders)
